update post screen

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -17,5 +17,6 @@
   "appComments": "Comments",
   "appReadMore": "Read More",
   "appHoursAgo": "hours ago",
-  "appAddComment": "Add Comment"
+  "appAddComment": "Add Comment",
+  "appMessageType": "Message Type"
 }
