--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -17,5 +17,6 @@
   "appComments": "Bình luận",
   "appReadMore": "Xem thêm",
   "appHoursAgo": "giờ trước",
-  "appAddComment": "Thêm bình luận"
+  "appAddComment": "Thêm bình luận",
+  "appMessageType": "Loại Tinh nhắn"
 }
