--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -18,5 +18,7 @@
   "appReadMore": "Xem thêm",
   "appHoursAgo": "giờ trước",
   "appAddComment": "Thêm bình luận",
-  "appMessageType": "Loại Tinh nhắn"
+  "appMessageType": "Loại Tinh nhắn",
+  "appNewFeed": "Bảng tin",
+  "appSeminar": "Hội thảo"
 }
