--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -20,5 +20,23 @@
   "appAddComment": "Add Comment",
   "appMessageType": "Message Type",
   "appNewFeed": "New Feed",
-  "appSeminar": "Seminar"
+  "appSeminar": "Seminar",
+  "appHome" : "Home",
+  "appBooking": "Booking",
+  "appUpcoming": "Upcoming",
+  "appCompleted": "Completed",
+  "appCanceled": "Cancel",
+  "appWelcomeBack": "Welcome back",
+  "appProfile": "Profile",
+  "appInterest": "My Interests",
+  "appFavorite": "My Favorites",
+  "appLanguage": "Language",
+  "appGeneral": "General",
+  "appNotification": "Notification",
+  "appLogout": "Logout",
+  "appSetting": "Settings",
+  "appExploreNow": "Explore Now",
+  "appExploreText1": "View readers and explore \n new point of view to your \n favorite books",
+  "appExploreText2": "Start explore now, find your favorite \n book and start record, having your \n own meeting 1 on 1 with readers",
+  "appFindYourFavor": "Find your favor"
 }
