--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -20,5 +20,23 @@
   "appAddComment": "Thêm bình luận",
   "appMessageType": "Loại Tinh nhắn",
   "appNewFeed": "Bảng tin",
-  "appSeminar": "Hội thảo"
+  "appSeminar": "Hội thảo",
+  "appHome": "Trang chủ",
+  "appBooking": "Đơn hàng",
+  "appUpcoming": "Sắp tới",
+  "appCompleted": "Hoàn thành",
+  "appCanceled": "Hủy",
+  "appWelcomeBack": "Chào mừng trở lại",
+  "appProfile": "Hồ sơ",
+  "appInterest": "Sở thích",
+  "appFavorite": "Yêu thích",
+  "appLanguage": "Ngôn ngữ",
+  "appGeneral": "Cài đặt chung",
+  "appNotification": "Thông báo",
+  "appLogout": "Đăng suất",
+  "appSetting": "Cài đặt",
+  "appExploreNow": "Khám phá ngay",
+  "appExploreText1": "Xem người đọc và khám phá quan điểm mới đối với sách yêu thích của bạn",
+  "appExploreText2": "Bắt đầu khám phá ngay, tìm cuốn sách yêu thích của bạn và bắt đầu ghi chép, có cuộc họp riêng 1 trên 1 với người đọc",
+  "appFindYourFavor": "Tìm người đọc yêu thích"
 }
