update noti listtile splash

--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -23,9 +23,9 @@
   "appSeminar": "Hội thảo",
   "appHome": "Trang chủ",
   "appBooking": "Đơn hàng",
-  "appUpcoming": "Sắp tới",
+  "appUpcoming": "Sắp diễn ra",
   "appCompleted": "Hoàn thành",
-  "appCanceled": "Hủy",
+  "appCanceled": "Đã Hủy",
   "appWelcomeBack": "Chào mừng trở lại",
   "appProfile": "Hồ sơ",
   "appInterest": "Sở thích",
