--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -21,22 +21,36 @@
   "appMessageType": "Message Type",
   "appNewFeed": "New Feed",
   "appSeminar": "Seminar",
-  "appHome" : "Home",
-  "appBooking": "Booking",
   "appUpcoming": "Upcoming",
   "appCompleted": "Completed",
-  "appCanceled": "Canceled",
+  "appCanceled": "Cancel",
   "appWelcomeBack": "Welcome back",
   "appProfile": "Profile",
   "appInterest": "My Interests",
   "appFavorite": "My Favorites",
-  "appLanguage": "Language",
+  "appLanguages": "Languages",
   "appGeneral": "General",
-  "appNotification": "Notification",
   "appLogout": "Logout",
   "appSetting": "Settings",
   "appExploreNow": "Explore Now",
   "appExploreText1": "View readers and explore new point of view to your favorite books",
   "appExploreText2": "Start explore now, find your favorite book and start record, having your own meeting 1 on 1 with readers",
-  "appFindYourFavor": "Find your favor"
+  "appFindYourFavor": "Find your favor",
+  "appHome": "Home",
+  "appSearch": "Search",
+  "appBooking": "Booking",
+  "appNotification": "Notification",
+  "appPagePals": "PagePals",
+  "appRequestToBeReader": "Be a reader?",
+  "appSearchSomething": "Search something ...",
+  "appBookAreNowAtYourFinger": "Books are now at your fingertips",
+  "appReaderAreWaitingForYou": "Readers are waiting for you",
+  "appReaders": "Readers",
+  "appBooks": "Books",
+  "appSearchForBook": "Search for book",
+  "appSearchForReader": "Search for reader",
+  "appAbout": "About",
+  "appReviews": "Reviews",
+  "appVideIntroduction": "Video Introduction",
+  "appReaderIntroduction": "Reader Introduction"
 }
