--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -21,8 +21,6 @@
   "appMessageType": "Loại Tinh nhắn",
   "appNewFeed": "Bảng tin",
   "appSeminar": "Hội thảo",
-  "appHome": "Trang chủ",
-  "appBooking": "Đơn hàng",
   "appUpcoming": "Sắp diễn ra",
   "appCompleted": "Hoàn thành",
   "appCanceled": "Đã Hủy",
@@ -30,13 +28,29 @@
   "appProfile": "Hồ sơ",
   "appInterest": "Sở thích",
   "appFavorite": "Yêu thích",
-  "appLanguage": "Ngôn ngữ",
+  "appLanguages": "Ngôn ngữ",
   "appGeneral": "Cài đặt chung",
-  "appNotification": "Thông báo",
   "appLogout": "Đăng suất",
   "appSetting": "Cài đặt",
   "appExploreNow": "Khám phá ngay",
   "appExploreText1": "Xem người đọc và khám phá quan điểm mới đối với sách yêu thích của bạn",
   "appExploreText2": "Bắt đầu khám phá ngay, tìm cuốn sách yêu thích của bạn và bắt đầu ghi chép, có cuộc họp riêng 1 trên 1 với người đọc",
-  "appFindYourFavor": "Tìm người đọc yêu thích"
+  "appFindYourFavor": "Tìm người đọc yêu thích",
+  "appHome": "Trang chủ",
+  "appSearch": "Tìm kiếm",
+  "appBooking": "Đơn hàng",
+  "appNotification": "Thông báo",
+  "appPagePals": "Sự kiện",
+  "appRequestToBeReader": "Thành người đọc?",
+  "appSearchSomething": "Tìm kiếm gì đó...",
+  "appBookAreNowAtYourFinger": "Sách giờ đây đã ở ngón tay của bạn",
+  "appReaderAreWaitingForYou": "Người đọc đang chờ bạn",
+  "appReaders": "Người đọc",
+  "appBooks": "Sách",
+  "appSearchForBook": "Tìm kiếm sách",
+  "appSearchForReader": "Tìm kiếm người đọc",
+  "appAbout": "Về tôi",
+  "appReviews": "Đánh giá",
+  "appVideIntroduction": "Video giới thiệu",
+  "appReaderIntroduction": "Giới thiệu người đọc"
 }
