--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -52,5 +52,6 @@
   "appAbout": "About",
   "appReviews": "Reviews",
   "appVideIntroduction": "Video Introduction",
-  "appReaderIntroduction": "Reader Introduction"
+  "appReaderIntroduction": "Reader Introduction",
+  "appSave": "Save"
 }
