--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -52,5 +52,6 @@
   "appAbout": "Về tôi",
   "appReviews": "Đánh giá",
   "appVideIntroduction": "Video giới thiệu",
-  "appReaderIntroduction": "Giới thiệu người đọc"
+  "appReaderIntroduction": "Giới thiệu người đọc",
+  "appSave": "Lưu"
 }
