--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -23,7 +23,7 @@
   "appSeminar": "Seminar",
   "appUpcoming": "Upcoming",
   "appCompleted": "Completed",
-  "appCanceled": "Cancel",
+  "appCanceled": "Canceled",
   "appWelcomeBack": "Welcome back",
   "appProfile": "Profile",
   "appInterest": "My Interests",
