--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -60,5 +60,12 @@
   "appReCheckInformation": "Re-check Infor",
   "appNext": "Next",
   "appBack": "Back",
-  "appSubmit": "Submit"
+  "appSubmit": "Submit",
+  "appDiscoveryNewBook": "Discover new books!",
+  "appReadAndLearn": "Read and learn",
+  "appEnjoyYourTime": "Enjoy your time",
+  "appGetInspired": "Get inspired",
+  "appFindYourNextBook": "Find your next book",
+  "appReadAndGrow": "Read and grow",
+  "appReviewUsNow": "Review us now, "
 }
