--- a/lib/l10n/app_vi.arb
+++ b/lib/l10n/app_vi.arb
@@ -60,5 +60,12 @@
   "appReCheckInformation": "Kiểm tra lại thông tin",
   "appNext": "Tiếp theo",
   "appBack": "Quay lại",
-  "appSubmit": "Submit"
+  "appSubmit": "Gửi",
+  "appDiscoveryNewBook": "Khám phá sách mới",
+  "appReadAndLearn": "Đọc và học",
+  "appEnjoyYourTime": "Thưởng thức thời gian của bạn",
+  "appGetInspired": "Được truyền cảm hứng",
+  "appFindYourNextBook": "Tìm cuốn sách tiếp theo của bạn",
+  "appReadAndGrow": "Đọc và phát triển",
+  "appReviewUsNow": "Đánh giá chúng tôi ngay, "
 }
