done first 2 flow
chưa add shimmer cho booking screens khi load list booking của customer

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "en",
-  "appTitle": "Pagepal",
+  "appTitle": "pagepals",
   "appDescription": "Join our growing readers community to \n offer your professional service, connect \n with customers, and get paid to PagePals \n trusted platform.",
   "appContinueWithFacebook": "Continue with Facebook",
   "appContinueWithGoogle": "Continue with Google",
